# python-prataiclient

./: .gitignore  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt
prataiclient/: shell.py  utils.py
prataiclient/v1/: client.py  clusters.py  events.py  functions.py  images.py
prataiclient/v1/managers/: clusters.py  events.py  functions.py  images.py
